Archive2/7e/5326d1bcce33e8/output
main.cpp:1:6: error: found ':' in nested-name-specifier, expected '::'
 error: unrecognized command line option "-std=c++11"
      ^
main.cpp:1:1: error: 'error' does not name a type
 error: unrecognized command line option "-std=c++11"
 ^
